[package]
name = "rust_beer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest =  { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "*", features = ["vendored"] }
thiserror = "1.0"

[build-dependencies]
cxx-build = "1.0"